[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sampleviz"
version = "0.1"
authors = [{name="Matthijs Westera", email="m.westera@hum.leidenuniv.nl"}]
description = "Sample rows per-quantile from csv, based on a numerical key/column."
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pandas"]

[project.scripts]
sampleviz = "sampleviz:main"

[project.urls]
"Homepage" = "https://github.com/mwestera/sampleviz"
"Bug Tracker" = "https://github.com/mwestera/sampleviz/issues"