[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strample"
version = "0.1"
authors = [{name="Matthijs Westera", email="m.westera@hum.leidenuniv.nl"}]
description = "Sample rows per-quantile from csv, based on a numerical key/column."
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pandas", "seaborn", "matplotlib"]

[project.scripts]
strample = "strample:main"

[project.urls]
"Homepage" = "https://github.com/mwestera/strample"
"Bug Tracker" = "https://github.com/mwestera/strample/issues"